--- a/components/wikipedia.html
+++ b/components/wikipedia.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Match List Question · ISLE Editor Documentation</title>
+        <title>Wikipedia · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="multiple-choice-question.html" />
+    <link rel="next" href="../packaging.html" />
     
     
-    <link rel="prev" href="lesson-submit.html" />
+    <link rel="prev" href="video-player.html" />
     
 
     </head>
@@ -362,7 +362,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.9" data-path="match-list-question.html">
+        <li class="chapter " data-level="1.4.9" data-path="match-list-question.html">
             
                 <a href="match-list-question.html">
             
@@ -602,7 +602,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.25" data-path="wikipedia.html">
+        <li class="chapter active" data-level="1.4.25" data-path="wikipedia.html">
             
                 <a href="wikipedia.html">
             
@@ -663,7 +663,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Match List Question</a>
+        <a href=".." >Wikipedia</a>
     </h1>
 </div>
 
@@ -678,26 +678,20 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="match-list-question">Match List Question</h1>
-<p>An ISLE component that renders a question in which the learner has to match elements from two lists with each other in the correct way.</p>
-<h4 id="example">Example</h4>
-<pre class="language-"><code class="lang-javascript"><span class="token operator">&lt;</span>MatchListQuestion
-    question<span class="token operator">=</span><span class="token string">&quot;Please match the correct surnames and first names.&quot;</span>
-    elements<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span>
-        <span class="token punctuation">{</span> a<span class="token punctuation">:</span> <span class="token string">&apos;Ronald&apos;</span><span class="token punctuation">,</span> b<span class="token punctuation">:</span> <span class="token string">&apos;Fisher&apos;</span> <span class="token punctuation">}</span><span class="token punctuation">,</span>
-        <span class="token punctuation">{</span> a<span class="token punctuation">:</span> <span class="token string">&apos;Florence&apos;</span><span class="token punctuation">,</span> b<span class="token punctuation">:</span> <span class="token string">&apos;Nightingale&apos;</span> <span class="token punctuation">}</span><span class="token punctuation">,</span>
-        <span class="token punctuation">{</span> a<span class="token punctuation">:</span> <span class="token string">&apos;Karl&apos;</span><span class="token punctuation">,</span> b<span class="token punctuation">:</span> <span class="token string">&apos;Pearson&apos;</span> <span class="token punctuation">}</span><span class="token punctuation">,</span>
-    <span class="token punctuation">]</span><span class="token punctuation">}</span>
-    onSubmit<span class="token operator">=</span><span class="token punctuation">{</span> <span class="token punctuation">(</span> answers <span class="token punctuation">)</span> <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token punctuation">{</span>
-
-    <span class="token punctuation">}</span><span class="token punctuation">}</span>
+                                <h1 id="wikipedia">Wikipedia</h1>
+<p>The <strong>Wikipedia</strong> component scans the <strong>Wikipedia</strong> and returns an article - if anything valid is found under the given address.</p>
+<h4 id="example">Example:</h4>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Wikipedia
+    showSearch
+    speech
+    language <span class="token operator">=</span> <span class="token string">&quot;de-DE&quot;</span>
 <span class="token operator">/</span><span class="token operator">&gt;</span>
 </code></pre>
-<h4 id="options">Options</h4>
+<h4 id="options">Options:</h4>
 <ul>
-<li><strong>elements</strong>: an <code>array</code> holding the correct pairs displayed at the top of the free text question component. Each <code>array</code> element must be an <code>object</code> with <code>a</code> and <code>b</code> properties.</li>
-<li><strong>onChange</strong>: callback <code>function</code> invoked every time the text area value changes. Default: <code>null</code>.</li>
-<li><strong>question</strong>: a <code>string</code> holding the question to be displayed at the top of the match list question component. Default: <code>null</code>.</li>
+<li><strong>showSearch</strong>: <code>boolean</code> indicating whether to render a search input.</li>
+<li><strong>language</strong>: specifies the given language. <strong>us-EN</strong>, <strong>de-DE</strong>, and <strong>fr-FR</strong> are supported (English, German, French).</li>
+<li><strong>speech</strong>: <code>boolean</code> indicating whether to allow inputs via speech recognition. The recognition identifier is the name <strong>Wikipedia</strong>. For example: if you ask &quot;Wikipedia, what do you know about Hillary Clinton&quot;, you will see the wikipedia entry for Hillary Clinton.</li>
 </ul>
 
                                 
@@ -726,12 +720,12 @@
 
             
                 
-                <a href="lesson-submit.html" class="navigation navigation-prev " aria-label="Previous page: Lesson Submit">
+                <a href="video-player.html" class="navigation navigation-prev " aria-label="Previous page: Video Player">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="multiple-choice-question.html" class="navigation navigation-next " aria-label="Next page: Multiple Choice Question">
+                <a href="../packaging.html" class="navigation navigation-next " aria-label="Next page: Publishing Lessons">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -742,7 +736,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Match List Question","level":"1.4.9","depth":2,"next":{"title":"Multiple Choice Question","level":"1.4.10","depth":2,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},"previous":{"title":"Lesson Submit","level":"1.4.8","depth":2,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/match-list-question.md","mtime":"2016-12-28T20:35:18.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-24T17:29:54.559Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Wikipedia","level":"1.4.25","depth":2,"next":{"title":"Publishing Lessons","level":"1.5","depth":1,"path":"packaging.md","ref":"packaging.md","articles":[]},"previous":{"title":"Video Player","level":"1.4.24","depth":2,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/wikipedia.md","mtime":"2017-12-24T17:28:59.459Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-24T17:29:54.559Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
