--- a/app/components/input/voice/voice.css
+++ b/app/components/input/voice/voice.css
@@ -1,8 +1,44 @@
 .voice-input {
-    width: 100%;
-    color: red;
+	height: 36px;
+	border:solid 1px rgb(90,90,90);
 }
 
-.microphone{
+.voice-input:hover {
+	box-shadow: 0 0 4px rgb(60,60,60);
+}
 
+voice-input svg {
+	opacity: 0.4;
+}
+
+.voice-input-text {
+	float: left;
+	width: 94% !important;
+	height: 100%;
+	border: none;
+	padding-left: 8px;
+	color: rgb(60,60,60);
+	font-family: Open Sans;
+}
+
+.voice-input-text:focus {
+	outline-width: 0;
+}
+
+.voice-microphone {
+	float: right;
+	margin-top: 2px;
+	height: 80%;
+	width: auto;
+	opacity: 0.7;
+	fill: gray;
+}
+
+.voice-microphone:hover {
+	opacity: 1;
+	fill: green;
+}
+
+.voice-microphone svg {
+	fill: green;
 }
