--- a/app/components/playground/syntax.css
+++ b/app/components/playground/syntax.css
@@ -21,7 +21,7 @@
 .cm-s-monokai span.cm-string-2 {color: darkgrey;}
 
 .cm-s-monokai span.cm-variable {color:darkgrey;}
-.cm-s-monokai span.cm-variable-2 {color: #9effff;}
+.cm-s-monokai span.cm-variable-2 {color: rgb(228, 19, 210);}
 .cm-s-monokai span.cm-def {color: #fd971f;}
 .cm-s-monokai span.cm-bracket {color: #f8f8f2;}
 .cm-s-monokai span.cm-tag {color: #f92672;}
