--- a/app/components/recorder/recorder.css
+++ b/app/components/recorder/recorder.css
@@ -2,26 +2,37 @@
 	position: absolute;
 	right: 2%;
 	top: 0.5%;
-	width: 300px;
+	width: 320px;
 	height: auto;
 	text-align: right;
+	z-index: 10;
+	background: rgba(0, 80,255,0.5);
+	box-shadow: 2px 2px 10px black;
+	cursor: default;
 }
 
 .recorder-button-container {
 	position: absolute;
 	border-radius: 50%;
+	margin-right: 10px;
 	color: rgba(0,0,0,1);
-	border: solid 4px black;
+	border: solid 4px rgb(70,70,70);
 	top: 8px;
 	width: 40px;
 	height: 40px;
 	right: 30%;
 }
 
+.recorder-button-container:hover {
+	border: solid 4px black;
+}
+
+
 .recorder-rec {
 	font-family: Arial;
 	font-size: 40px;
 	font-weight: 800;
+	margin-right: 8px;
 }
 
 .recorder-button {
@@ -34,6 +45,12 @@
 	cursor: pointer;
 	margin-right: 25px;
 }
+
+
+.recorder-rec:hover {
+	color: green;
+}
+
 
 #install-button {
 	padding: 0;
